--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -3,7 +3,9 @@
 ; 游戏、B站等
 
 ;基础规则集定义
-ruleset=🤖 AI,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/Direct.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/ProxyLite.list
+ruleset=🤖 AI,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/AI.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛡️ 隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
