--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -32,7 +32,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;策略组定义
-custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]🔯 香港故转`[]🔯 日本故转`[]🔯 狮城故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🛩️ 高速节点`[]🕊️ 便宜节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]🔯 香港故转`[]🔯 日本故转`[]🔯 狮城故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🛩️ 高速节点`[]🕊️ 便宜节点`[]🍃 香港均衡`[]♻️ 香港自动`[]♻️ 日本自动`[]♻️ 美国自动`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🔯 故障转移`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
