--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -1,7 +1,7 @@
 [custom]
 ;优先规则集定义
 ;待优化：游戏相关，如何使用.rules后缀的文件
-ruleset=🕹️ GTAOL,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Rockstar/Rockstar.list
+;ruleset=🕹️ GTAOL,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Rockstar/Rockstar.list
 
 ;基础规则集定义
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/ProxyLite.list
