--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -1,7 +1,7 @@
 [custom]
 ;优先规则集定义
 ;待优化：游戏相关，如何使用.rules后缀的文件
-;ruleset=🕹️ GTAOL,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Rockstar/Rockstar.list
+ruleset=🕹️ GTAOL,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Rockstar/Rockstar.list
 
 ;基础规则集定义
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/ProxyLite.list
@@ -21,7 +21,6 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=🅡 Rockstar,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Rockstar/Rockstar.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -38,11 +37,11 @@ custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🔯 故障转移`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🕹️ GTAOL`[]DIRECT`[]🚀 节点选择`[]🛩️ 高速节点`[]🐸 手动切换
+
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 狮城故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🛩️ 高速节点`[]🕊️ 便宜节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 美国故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🐸 手动切换
 custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🛩️ 高速节点`[]🕊️ 便宜节点`[]🐸 手动切换`[]🚀 节点选择
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 狮城故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🅡 Rockstar`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 狮城故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 狮城故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🛩️ 高速节点`[]🕊️ 便宜节点`[]🐸 手动切换
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🐸 手动切换
 custom_proxy_group=🎞️ 哔哩哔哩`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
