--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -38,7 +38,7 @@ custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]🔯 香港故
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🔯 故障转移`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🕹️ GTAOL`[]DIRECT`[]🚀 节点选择`[]🛩️ 高速节点`[]🐸 手动切换
+custom_proxy_group=🕹️ GTAOL`select`[]DIRECT`[]🚀 节点选择`[]🛩️ 高速节点`[]🐸 手动切换
 
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 狮城故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🛩️ 高速节点`[]🕊️ 便宜节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 美国故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🐸 手动切换
