--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -1,6 +1,6 @@
 [custom]
 ;优先规则集定义
-;待优化：游戏相关，如何使用.rules后缀的文件
+;待优化：steam等游戏平台下载
 
 ;基础规则集定义
 ruleset=⚕ hentaiverse,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/HV_ProxyLite.list
