--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -30,7 +30,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;策略组定义
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇬🇧 其他节点`[]🔯 故障转移`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🐸 手动切换`select`.*
+custom_proxy_group=🐸 手动切换`select`^((?!(网址|重置)).)*$
 
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]♻️ 新加坡自动`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]♻️ 自动选择`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
