--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -1,6 +1,6 @@
 [custom]
 ;优先规则集定义
-;待优化：steam等游戏平台下载；自定义模板显示订阅信息；避免BT\PT流量经过代理
+;待优化：自定义模板显示订阅信息；
 
 ;基础规则集定义
 ruleset=⚕ hentaiverse,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/HV_ProxyLite.list
