--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -3,6 +3,7 @@
 ;待优化：自定义模板显示订阅信息；
 
 ;基础规则集定义
+ruleset=🎵 TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/TikTok.list
 ruleset=⚕ hentaiverse,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/HV_ProxyLite.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/ProxyLite.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/Direct.list
@@ -34,6 +35,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇬🇧 其他节点`[]🔯 故障转移`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🐸 手动切换`select`^((?!(网址|重置)).)*$
 
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]♻️ 新加坡自动`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]♻️ 自动选择`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🐸 手动切换`[]🚀 节点选择
