--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -3,6 +3,9 @@
 ;待优化：自定义模板显示订阅信息；
 
 ;基础规则集定义
+ruleset=💀 拒绝访问,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/BanAD.list
+ruleset=💀 拒绝访问,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/REJECT.list
+
 ruleset=🎵 TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/TikTok.list
 ruleset=⚕ hentaiverse,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/HV_ProxyLite.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/ProxyLite.list
@@ -46,7 +49,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换
 
 custom_proxy_group=⚕ hentaiverse`select`[]♻️ HV自动`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
-
+custom_proxy_group=💀 拒绝访问`select`[]REJECT`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
 ;节点服务器地址：香港、台湾、日本、新加坡、美国、马来西亚、英国、泰国、越南、菲律宾、土耳其、阿根廷
 ;手动节点：`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇬🇧 其他节点`
 ;自动节点：`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`
