--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -9,6 +9,7 @@ ruleset=💀 拒绝访问,https://raw.githubusercontent.com/GoldenString01/openc
 ruleset=🎵 TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/TikTok.list
 ruleset=⚕ hentaiverse,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/HV_ProxyLite.list
 ruleset=🅰️ Amazing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Amazon.list
+ruleset=🖥️ Nvidia,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Nvidia/Nvidia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/ProxyLite.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/Direct.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/GoldenString01/openclash_rule/refs/heads/main/AI.list
@@ -42,6 +43,7 @@ custom_proxy_group=🐸 手动切换`select`^((?!(网址|重置)).)*$
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🅰️ Amazing`select`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🖥️ Nvidia`select`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]♻️ 新加坡自动`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]♻️ 自动选择`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🐸 手动切换`[]🚀 节点选择
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 新加坡自动`[]♻️ 日本自动`[]♻️ 美国自动`[]♻️ 其他自动`[]🐸 手动切换
