--- a/my_self_auto.ini
+++ b/my_self_auto.ini
@@ -71,7 +71,7 @@ custom_proxy_group=♻️ 台湾自动`url-test`(?=.*(台湾|TW|Tai Wan|Taiwan|T
 custom_proxy_group=♻️ 新加坡自动`url-test`(?=.*(新加坡|坡|狮城|SG|Singapore|广新))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 日本自动`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|广日))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 美国自动`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|广美)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 其他自动`url-test`(?=.*(英国|马来西亚|泰国|越南|菲律宾|土耳其|阿根廷))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 其他自动`url-test`(?=.*(英国|马来西亚|泰国|越南|菲律宾|土耳其|阿根廷|韩国))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ HV自动`url-test`(?=.*(香港|HK|Hong Kong|HongKong|广港|新加坡|坡|狮城|SG|Singapore|广新|台湾|TW|Tai Wan|Taiwan|TaiWan|广台))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`load-balance`^((?!(网址|重置)).)*$`http://www.gstatic.com/generate_204`300,,50
 
